@@ -1,6 +1,6 @@
 .ig
 Copyright (C) 2002-10 Bruce Allen <smartmontools-support@lists.sourceforge.net>
-Copyright (C) 2004-13 Christian Franke <smartmontools-support@lists.sourceforge.net>
+Copyright (C) 2004-14 Christian Franke <smartmontools-support@lists.sourceforge.net>
 
 $Id$
 
@@ -2165,8 +2165,8 @@ The device self-test log contains records of errors.
 self-test are ignored.
 .PP
 To test within the shell for whether or not the different bits are
-turned on or off, you can use the following type of construction (this
-is bash syntax):
+turned on or off, you can use the following type of construction
+(which should work with any POSIX compatible shell):
 .nf
 .B smartstat=$(($? & 8))
 .fi
@@ -2176,11 +2176,12 @@ This looks at only at bit 3 of the exit status
 $smartstat will be nonzero if SMART status check returned "disk
 failing" and zero otherwise.
 
-This bash script prints all status bits:
+This shell script prints all status bits:
 .nf
-status=$?
-for ((i=0; i<8; i++)); do
-  echo "Bit $i: $((status & 2**i && 1))"
+val=$?; mask=1
+for i in 0 1 2 3 4 5 6 7; do
+  echo "Bit $i: $(((val & mask) && 1))"
+  mask=$((mask << 1))
 done
 .fi
 
